--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,14 @@ dependencies {
     def lifecycle_version = "2.0.0"
     def retrofit_version = "2.5.0"
     def nav_version = "1.0.0-beta01"
+    def material_version = "1.0.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation "com.google.android.material:material:$material_version"
     // Room
     implementation "androidx.room:room-runtime:$room_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
