--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     implementation "android.arch.navigation:navigation-fragment-ktx:$nav_version" // use -ktx for Kotlin
     implementation "android.arch.navigation:navigation-ui-ktx:$nav_version" // use -ktx for Kotlin
 
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
