--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.20'
+    ext.kotlin_version = '1.3.40'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0-alpha01"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0-alpha05"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,6 +22,22 @@ allprojects {
         google()
         jcenter()
     }
+}
+
+ext {
+    appcompat_version = '1.0.2'
+    constraint_layout_version = '2.0.0-beta2'
+    room_version = "2.1.0"
+    lifecycle_version = "2.0.0"
+    retrofit_version = "2.5.0"
+    nav_version = "1.0.0"
+    material_version = "1.1.0-alpha05"
+    preference_version = '1.0.0'
+    koin_version = "2.0.1"
+    coroutines_android_version = '1.2.1'
+    junit_version = '4.12'
+    test_runner_version = '1.1.1'
+    espresso_version = '3.1.1'
 }
 
 task clean(type: Delete) {
