--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ ext {
     coroutines_android_version = '1.2.1'
     junit_version = '4.12'
     test_runner_version = '1.1.1'
+    test_rules_version = '1.1.1'
     espresso_version = '3.1.1'
 }
 
