--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ ext {
     preference_version = '1.0.0'
     koin_version = "2.0.1"
     coroutines_android_version = '1.2.1'
+    lottie_version = '3.0.1'
     junit_version = '4.12'
     test_runner_version = '1.1.1'
     test_rules_version = '1.1.1'
