--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0-alpha05"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.0.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -30,7 +30,7 @@ ext {
     room_version = "2.1.0"
     lifecycle_version = "2.0.0"
     retrofit_version = "2.6.0"
-    nav_version = "1.0.0"
+    nav_version = "2.0.0"
     material_version = "1.1.0-alpha05"
     preference_version = '1.0.0'
     koin_version = "2.0.1"
