--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.40'
+    ext.kotlin_version = '1.3.41'
     repositories {
         google()
         jcenter()
@@ -25,7 +25,7 @@ allprojects {
 }
 
 ext {
-    appcompat_version = '1.0.2'
+    appcompat_version = '1.1.0-rc01'
     constraint_layout_version = '2.0.0-beta2'
     room_version = "2.1.0"
     lifecycle_version = "2.0.0"
