--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.41'
+    ext.kotlin_version = '1.3.50'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.0.0"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -28,9 +28,9 @@ ext {
     appcompat_version = '1.1.0-rc01'
     constraint_layout_version = '2.0.0-beta2'
     room_version = "2.1.0"
-    lifecycle_version = "2.0.0"
+    lifecycle_version = "2.1.0"
     retrofit_version = "2.6.0"
-    nav_version = "2.0.0"
+    nav_version = "2.1.0"
     timber_version = '4.7.1'
     material_version = "1.1.0-alpha07"
     preference_version = '1.0.0'
@@ -38,6 +38,7 @@ ext {
     coroutines_android_version = '1.2.1'
     lottie_version = '3.0.1'
     junit_version = '4.12'
+    google_truth_version = '1.0'
     test_core_version = '1.2.0'
     test_runner_version = '1.1.1'
     test_rules_version = '1.1.1'
