--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ ext {
     test_ext_junit_version = '1.1.1'
     test_ext_truth_version = '1.2.0'
     espresso_version = '3.1.1'
-    leak_canary_version = '2.0-alpha-3'
+    leak_canary_version = '2.0-beta-3'
 }
 
 task clean(type: Delete) {
