--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:3.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0"
@@ -29,17 +29,17 @@ allprojects {
 }
 
 ext {
-    appcompat_version = '1.1.0-rc01'
+    appcompat_version = '1.1.0'
     constraint_layout_version = '2.0.0-beta2'
-    room_version = "2.1.0"
+    room_version = "2.2.1"
     lifecycle_version = "2.1.0"
     retrofit_version = "2.6.0"
     nav_version = "2.1.0"
     timber_version = '4.7.1'
-    material_version = "1.1.0-alpha07"
+    material_version = "1.1.0-beta01"
     preference_version = '1.0.0'
     koin_version = "2.0.1"
-    coroutines_android_version = '1.2.1'
+    coroutines_android_version = '1.3.2'
     lottie_version = '3.0.1'
     junit_version = '4.12'
     google_truth_version = '1.0'
