--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        repositories {
+            maven { url 'https://jitpack.io' }
+        }
     }
 }
 
@@ -40,6 +43,7 @@ ext {
     preference_version = '1.0.0'
     koin_version = "2.0.1"
     coroutines_android_version = '1.3.2'
+    mpandroidchart_version = 'v3.1.0'
     lottie_version = '3.0.1'
     junit_version = '4.12'
     google_truth_version = '1.0'
