--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,10 @@ dependencies {
     implementation "com.jakewharton.timber:timber:$rootProject.timber_version"
     // MPAndroidChart
     implementation "com.github.PhilJay:MPAndroidChart:$rootProject.mpandroidchart_version"
-
+    //Lottie
     implementation "com.airbnb.android:lottie:$rootProject.lottie_version"
+    // ThreeTenABP
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
     // Testing dependencies
     // Core library
     androidTestImplementation "androidx.test:core:$rootProject.test_core_version"
