--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ ext {
     koin_version = "2.0.1"
     coroutines_android_version = '1.3.2'
     mpandroidchart_version = 'v3.1.0'
+    coil_version = '0.8.0'
     lottie_version = '3.0.1'
     junit_version = '4.12'
     google_truth_version = '1.0'
