--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,8 @@ ext {
     koin_version = "2.0.1"
     coroutines_android_version = '1.3.2'
     mpandroidchart_version = 'v3.1.0'
-    coil_version = '0.8.0'
+    threetenabp_version = '1.2.1'
+    picasso_version = '2.71828'
     lottie_version = '3.0.1'
     junit_version = '4.12'
     google_truth_version = '1.0'
