--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,37 @@ dependencies {
     implementation "com.xwray:groupie-kotlin-android-extensions:$rootProject.groupie_version"
     // WorkManager
     implementation "androidx.work:work-runtime-ktx:$rootProject.work_manager_version"
+    // Leak Canary
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$rootProject.leak_canary_version"
+
     // Testing dependencies
+
+    // JUnit tests
+
+    testImplementation "androidx.test:core:$rootProject.test_core_version"
+    testImplementation "androidx.test:runner:$rootProject.test_runner_version"
+    testImplementation "androidx.test:rules:$rootProject.test_rules_version"
+    // Roboelectric
+    testImplementation "org.robolectric:robolectric:$rootProject.roboelectric_version"
+    // Assertions
+    testImplementation "androidx.test.ext:junit:$rootProject.test_ext_junit_version"
+    testImplementation "androidx.test.ext:truth:$rootProject.test_ext_truth_version"
+    // Room
+    testImplementation "androidx.room:room-testing:$rootProject.room_version"
+    // Lifecycle
+    testImplementation "androidx.arch.core:core-testing:$rootProject.lifecycle_version"
+    // Coroutines test
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$rootProject.coroutines_android_version"
+    // Use ThreeTen BP for unit testing
+    testImplementation ('org.threeten:threetenbp:1.3.2'){
+        exclude group:'com.jakewharton.threetenabp', module:'threetenabp'
+    }
+    // Koin
+    testImplementation "org.koin:koin-test:$rootProject.koin_version"
+    testImplementation "junit:junit:$rootProject.junit_version"
+
+    // Android tests
+
     // Core library
     androidTestImplementation "androidx.test:core:$rootProject.test_core_version"
     // AndroidJUnitRunner and JUnit Rules
@@ -85,25 +115,9 @@ dependencies {
     // Assertions
     androidTestImplementation "androidx.test.ext:junit:$rootProject.test_ext_junit_version"
     androidTestImplementation "androidx.test.ext:truth:$rootProject.test_ext_truth_version"
-    androidTestImplementation "com.google.truth:truth:$rootProject.google_truth_version"
     // Espresso dependencies
     androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.espresso_version"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$rootProject.espresso_version"
-    // Room
-    androidTestImplementation "androidx.room:room-testing:$rootProject.room_version"
-    // Lifecycle
-    androidTestImplementation "androidx.arch.core:core-testing:$rootProject.lifecycle_version"
-    // Koin
-    testImplementation "org.koin:koin-test:$rootProject.koin_version"
-    testImplementation "junit:junit:$rootProject.junit_version"
-    // Coroutines test
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$rootProject.coroutines_android_version"
-    // Leak Canary
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:$rootProject.leak_canary_version"
     // WorkManager
     androidTestImplementation "androidx.work:work-testing:$rootProject.work_manager_version"
-    // Use ThreeTen BP for unit testing
-    testImplementation ('org.threeten:threetenbp:1.3.2'){
-        exclude group:'com.jakewharton.threetenabp', module:'threetenabp'
-    }
 }
