--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ ext {
     test_rules_version = '1.1.1'
     test_ext_junit_version = '1.1.1'
     test_ext_truth_version = '1.2.0'
+    mockito_kotlin_version = '2.2.0'
     espresso_version = '3.1.1'
     leak_canary_version = '2.0'
 }
