Basic LaunchpadsRepo tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
     }
     testOptions {
         unitTests.returnDefaultValues = true
+        animationsDisabled = true
     }
     compileOptions {
         sourceCompatibility = 1.8
