--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ ext {
     retrofit_version = "2.7.1"
     nav_version = "2.1.0"
     timber_version = '4.7.1'
-    material_version = "1.1.0-beta01"
+    material_version = "1.2.0-alpha05"
     preference_version = '1.0.0'
     koin_version = "2.0.1"
     coroutines_android_version = '1.3.3'
