--- a/build.gradle
+++ b/build.gradle
@@ -33,21 +33,22 @@ allprojects {
 
 ext {
     appcompat_version = '1.1.0'
-    constraint_layout_version = '2.0.0-beta2'
-    room_version = "2.2.3"
-    lifecycle_version = "2.1.0"
+    constraint_layout_version = '2.0.0-beta4'
+    room_version = "2.2.4"
+    lifecycle_version = "2.2.0"
+    arch_version = "2.1.0"
     retrofit_version = "2.7.1"
-    nav_version = "2.1.0"
+    nav_version = "2.2.1"
     timber_version = '4.7.1'
     material_version = "1.2.0-alpha05"
-    preference_version = '1.0.0'
+    preference_version = '1.1.0'
     koin_version = "2.0.1"
     coroutines_android_version = '1.3.3'
     mpandroidchart_version = 'v3.1.0'
     threetenabp_version = '1.2.1'
     picasso_version = '2.71828'
     groupie_version = '2.7.0'
-    work_manager_version = '2.2.0'
+    work_manager_version = '2.3.3'
     lottie_version = '3.0.1'
     junit_version = '4.12'
     google_truth_version = '1.0'
